Add Tarpeian Method to fight bloat and documented the Symbolic Regression examples in the samples website